deploy/local-k8s/minio-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: "s3.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  number: 80
    - host: "minio.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio-console
                port:
                  number: 80
